--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,19 @@
 body {
     color: #777777;
     font-family: Arial, Helvetica, sans-serif;
-    width: 960px;
     background-image: url("../images/memphis_mini.png");
     background-repeat: repeat;
     display: block;
+}
+
+img {
+    margin: 0px 20px 20px 0px;
+    float: left;
+}
+
+p {
+    margin: 20px 0px 0px 0px;
+    float: right;
 }
 
 .suefooter {
