first draft contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,9 +11,49 @@ img {
     float: left;
 }
 
+h1, h2, h3 {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+h1 {
+    color: #ffffff;
+    background-color: #4aaaa5;
+    float: left;
+    text-align: center;
+}
+
+h2 {
+    color: #4aaaa5;
+    float: left;
+    border-bottom-style: solid;
+    border-bottom-width: 2px;
+    border-bottom-color: #cccccc;
+    font-size: 14px;
+    padding: 20px 20px 20px 20px;
+    width: 100%;
+}
+
+h3 {
+    color: #4aaaa5;
+}
+
 p {
     margin: 20px 0px 0px 0px;
     float: right;
+}
+
+.navbar {
+    border-bottom-style: solid;
+    border-bottom-width: 2px;
+    border-bottom-color: #cccccc;
+}
+
+.navbar-brand {
+    background-color: #4aaaa5;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    padding: 20px 20px 20px 20px;
+    color: #ffffff;
+    font-size: 14px;
 }
 
 .suefooter {
