about me is now in card

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,12 @@ p {
     font-size: 14px;
 }
 
+.card-title {
+    border-bottom-style: solid;
+    border-bottom-width: 2px;
+    border-bottom-color: #cccccc;
+}
+
 .suefooter {
     background-color: #666666;
     text-align: center;
